--- a/src/components/ProjectsCarousel.module.css
+++ b/src/components/ProjectsCarousel.module.css
@@ -198,6 +198,17 @@
   display: block;
 }
 
+.mediaImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: top center;
+  display: block;
+}
+
 .screenshotImg {
   width: 100%;
   height: auto;
